@startuml
title <size: 30> US01 Class Diagram

note "<b>Only methods related to\n<b>US01 are represented" as N1
class ConfigureLocationCTRL{
    - house : House
    + configureLocation (locationDTO : LocationDTO)
}

class Address {
    - doorReference : String
    - buildingNumber : String
    - streetName : String
    - city : String
    - country : String
    - zipCode : String
    + editAddress (address : Address) : int
    - areParamsNullOrEmpty (params... : String) : boolean
}
class House {
    - gps : GPS
    - address : Address
    + configureLocation(doorReference : String, buildingNumber : String, streetName : String, \ncity : String, country : String, zipCode : String, latitude : double, longitude : double)
    - createAddress(doorReference : String, buildingNumber : String, streetName : String, \ncity : String, country : String, zipCode : String) : Address
    - createGPS(latitude : double, longitude : double) : GPS
}
class GPS {
    - latitude : double
    - longitude : double
    + editGPS (gps : GPS) : int
    - areParamsValid (latitude : double, longitude : double) : boolean
}

class LocationDTO {
    - doorReference : String
    - buildingNumber : String
    - streetName : String
    - city : String
    - country : String
    - zipCode : String
    - latitude : double
    - longitude : double
}

GPS "1" -up--* "1" House
ConfigureLocationCTRL  .> House
ConfigureLocationCTRL  -down..>  LocationDTO
Address "1" -up--* "1" House

@enduml